ue4/expr/expr.output
Terminals unused in grammar

    OTHER


State 7 conflicts: 1 shift/reduce
State 26 conflicts: 4 shift/reduce
State 27 conflicts: 4 shift/reduce


Grammar

    0 $accept: lines $end

    1 lines: lines line
    2      | ε

    3 line: ASSIGN MEM EOL
    4     | term EOL
    5     | MEM EOL

    6 term: term MULT_OP factor
    7     | term DIV_OP factor
    8     | term PLUS_OP term
    9     | term MINUS_OP term
   10     | sigfactor

   11 sigfactor: factor
   12          | PLUS_OP factor
   13          | MINUS_OP factor

   14 factor: FPNUM
   15       | PAR_LEFT term PAR_RIGHT
   16       | MEM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PLUS_OP (258) 8 12
    MINUS_OP (259) 9 13
    MULT_OP (260) 6
    DIV_OP (261) 7
    PAR_LEFT (262) 15
    PAR_RIGHT (263) 15
    EOL (264) 3 4 5
    OTHER (265)
    FPNUM <realValue> (266) 14
    MEM <intValue> (267) 3 5 16
    ASSIGN <intValue> (268) 3


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    lines <realValue> (15)
        on left: 1 2
        on right: 0 1
    line <realValue> (16)
        on left: 3 4 5
        on right: 1
    term <realValue> (17)
        on left: 6 7 8 9 10
        on right: 4 6 7 8 9 15
    sigfactor <realValue> (18)
        on left: 11 12 13
        on right: 10
    factor <realValue> (19)
        on left: 14 15 16
        on right: 6 7 11 12 13


State 0

    0 $accept: • lines $end

    $default  reduce using rule 2 (lines)

    lines  go to state 1


State 1

    0 $accept: lines • $end
    1 lines: lines • line

    $end      shift, and go to state 2
    PLUS_OP   shift, and go to state 3
    MINUS_OP  shift, and go to state 4
    PAR_LEFT  shift, and go to state 5
    FPNUM     shift, and go to state 6
    MEM       shift, and go to state 7
    ASSIGN    shift, and go to state 8

    line       go to state 9
    term       go to state 10
    sigfactor  go to state 11
    factor     go to state 12


State 2

    0 $accept: lines $end •

    $default  accept


State 3

   12 sigfactor: PLUS_OP • factor

    PAR_LEFT  shift, and go to state 5
    FPNUM     shift, and go to state 6
    MEM       shift, and go to state 13

    factor  go to state 14


State 4

   13 sigfactor: MINUS_OP • factor

    PAR_LEFT  shift, and go to state 5
    FPNUM     shift, and go to state 6
    MEM       shift, and go to state 13

    factor  go to state 15


State 5

   15 factor: PAR_LEFT • term PAR_RIGHT

    PLUS_OP   shift, and go to state 3
    MINUS_OP  shift, and go to state 4
    PAR_LEFT  shift, and go to state 5
    FPNUM     shift, and go to state 6
    MEM       shift, and go to state 13

    term       go to state 16
    sigfactor  go to state 11
    factor     go to state 12


State 6

   14 factor: FPNUM •

    $default  reduce using rule 14 (factor)


State 7

    5 line: MEM • EOL
   16 factor: MEM •

    EOL  shift, and go to state 17

    EOL       [reduce using rule 16 (factor)]
    $default  reduce using rule 16 (factor)


State 8

    3 line: ASSIGN • MEM EOL

    MEM  shift, and go to state 18


State 9

    1 lines: lines line •

    $default  reduce using rule 1 (lines)


State 10

    4 line: term • EOL
    6 term: term • MULT_OP factor
    7     | term • DIV_OP factor
    8     | term • PLUS_OP term
    9     | term • MINUS_OP term

    PLUS_OP   shift, and go to state 19
    MINUS_OP  shift, and go to state 20
    MULT_OP   shift, and go to state 21
    DIV_OP    shift, and go to state 22
    EOL       shift, and go to state 23


State 11

   10 term: sigfactor •

    $default  reduce using rule 10 (term)


State 12

   11 sigfactor: factor •

    $default  reduce using rule 11 (sigfactor)


State 13

   16 factor: MEM •

    $default  reduce using rule 16 (factor)


State 14

   12 sigfactor: PLUS_OP factor •

    $default  reduce using rule 12 (sigfactor)


State 15

   13 sigfactor: MINUS_OP factor •

    $default  reduce using rule 13 (sigfactor)


State 16

    6 term: term • MULT_OP factor
    7     | term • DIV_OP factor
    8     | term • PLUS_OP term
    9     | term • MINUS_OP term
   15 factor: PAR_LEFT term • PAR_RIGHT

    PLUS_OP    shift, and go to state 19
    MINUS_OP   shift, and go to state 20
    MULT_OP    shift, and go to state 21
    DIV_OP     shift, and go to state 22
    PAR_RIGHT  shift, and go to state 24


State 17

    5 line: MEM EOL •

    $default  reduce using rule 5 (line)


State 18

    3 line: ASSIGN MEM • EOL

    EOL  shift, and go to state 25


State 19

    8 term: term PLUS_OP • term

    PLUS_OP   shift, and go to state 3
    MINUS_OP  shift, and go to state 4
    PAR_LEFT  shift, and go to state 5
    FPNUM     shift, and go to state 6
    MEM       shift, and go to state 13

    term       go to state 26
    sigfactor  go to state 11
    factor     go to state 12


State 20

    9 term: term MINUS_OP • term

    PLUS_OP   shift, and go to state 3
    MINUS_OP  shift, and go to state 4
    PAR_LEFT  shift, and go to state 5
    FPNUM     shift, and go to state 6
    MEM       shift, and go to state 13

    term       go to state 27
    sigfactor  go to state 11
    factor     go to state 12


State 21

    6 term: term MULT_OP • factor

    PAR_LEFT  shift, and go to state 5
    FPNUM     shift, and go to state 6
    MEM       shift, and go to state 13

    factor  go to state 28


State 22

    7 term: term DIV_OP • factor

    PAR_LEFT  shift, and go to state 5
    FPNUM     shift, and go to state 6
    MEM       shift, and go to state 13

    factor  go to state 29


State 23

    4 line: term EOL •

    $default  reduce using rule 4 (line)


State 24

   15 factor: PAR_LEFT term PAR_RIGHT •

    $default  reduce using rule 15 (factor)


State 25

    3 line: ASSIGN MEM EOL •

    $default  reduce using rule 3 (line)


State 26

    6 term: term • MULT_OP factor
    7     | term • DIV_OP factor
    8     | term • PLUS_OP term
    8     | term PLUS_OP term •
    9     | term • MINUS_OP term

    PLUS_OP   shift, and go to state 19
    MINUS_OP  shift, and go to state 20
    MULT_OP   shift, and go to state 21
    DIV_OP    shift, and go to state 22

    PLUS_OP   [reduce using rule 8 (term)]
    MINUS_OP  [reduce using rule 8 (term)]
    MULT_OP   [reduce using rule 8 (term)]
    DIV_OP    [reduce using rule 8 (term)]
    $default  reduce using rule 8 (term)


State 27

    6 term: term • MULT_OP factor
    7     | term • DIV_OP factor
    8     | term • PLUS_OP term
    9     | term • MINUS_OP term
    9     | term MINUS_OP term •

    PLUS_OP   shift, and go to state 19
    MINUS_OP  shift, and go to state 20
    MULT_OP   shift, and go to state 21
    DIV_OP    shift, and go to state 22

    PLUS_OP   [reduce using rule 9 (term)]
    MINUS_OP  [reduce using rule 9 (term)]
    MULT_OP   [reduce using rule 9 (term)]
    DIV_OP    [reduce using rule 9 (term)]
    $default  reduce using rule 9 (term)


State 28

    6 term: term MULT_OP factor •

    $default  reduce using rule 6 (term)


State 29

    7 term: term DIV_OP factor •

    $default  reduce using rule 7 (term)
